[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-live"
version = "0.1.0"
description = "Interactive HTML tables and Pyodide-powered graphs for evaluation results"
requires-python = ">=3.10"

[project.optional-dependencies]
# Only Registry.render_to_dir (local on-disk PDF/JSON/LaTeX rendering) needs a local
# matplotlib. The browser viewer uses Pyodide's own matplotlib. Install with
# `pip install -e .[render]` to use the local renderer.
render = ["matplotlib>=3.5"]

[tool.setuptools.package-data]
eval_live = ["*.js", "*.css", "*.py", "*.html", "vendor/*.js"]
